WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54150
Repro crash with Sony Google TV ad at Gizmodo
https://bugs.webkit.org/show_bug.cgi?id=54150
Summary
Repro crash with Sony Google TV ad at Gizmodo
Anders Carlsson
Reported
2011-02-09 15:32:15 PST
Repro crash with Sony Google TV ad at Gizmodo
Attachments
Patch
(12.99 KB, patch)
2011-02-09 15:37 PST
,
Anders Carlsson
no flags
Details
Formatted Diff
Diff
Patch
(2.26 KB, patch)
2011-02-10 18:47 PST
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-02-09 15:37:24 PST
Created
attachment 81886
[details]
Patch
Anders Carlsson
Comment 2
2011-02-09 15:47:15 PST
Committed
r78157
: <
http://trac.webkit.org/changeset/78157
>
Zhenyao Mo
Comment 3
2011-02-09 17:27:23 PST
The test is TIMEOUT on all chromium bots.
Philippe Normand
Comment 4
2011-02-10 01:39:38 PST
also times out on all GTK+ bots
Philippe Normand
Comment 5
2011-02-10 02:01:09 PST
(In reply to
comment #3
)
> The test is TIMEOUT on all chromium bots.
Adding Tools/DumpRenderTree/TestNetscapePlugIn/Tests/EvaluateJSDestroyingPluginFromDestroyStream.cpp to your build should fix the test, this is what I did on GTK and the test passes now.
Eric Seidel (no email)
Comment 6
2011-02-10 02:37:04 PST
This is failing on the Snow Leopard bot.
Eric Seidel (no email)
Comment 7
2011-02-10 02:49:21 PST
Reverted
r78157
for reason: Fails on a bunch of bots Committed
r78185
: <
http://trac.webkit.org/changeset/78185
>
Anders Carlsson
Comment 8
2011-02-10 09:48:13 PST
(In reply to
comment #7
)
> Reverted
r78157
for reason: > > Fails on a bunch of bots > > Committed
r78185
: <
http://trac.webkit.org/changeset/78185
>
This change was WebKit2-specific, and if the test times out for other ports it's better to add the test to the Skipped list and file new bugs.
Eric Seidel (no email)
Comment 9
2011-02-10 15:22:34 PST
I reverted it based on all the bots being red. But with further investigation it could have probably been skipped for other ports instead. But seems like something better done when landing. Also if this is re-landed, there was a Gtk build fix which was landed right after this which should be included in any re-landing.
Anders Carlsson
Comment 10
2011-02-10 18:47:55 PST
Created
attachment 82087
[details]
Patch
Anders Carlsson
Comment 11
2011-02-10 18:57:49 PST
Committed
r78299
: <
http://trac.webkit.org/changeset/78299
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug