2011-02-09  Anders Carlsson  <andersca@apple.com>

Reviewed by Sam Weinig.

        Repro crash with Sony Google TV ad at Gizmodo
        https://bugs.webkit.org/show_bug.cgi?id=54150

        Since PluginView::evaluate can cause the plug-in element to go away, we need to protect it.

        * WebProcess/Plugins/PluginView.cpp:
        (WebKit::PluginView::~PluginView):
        Null out m_pluginElement here so we'll catch crashes earlier.

        (WebKit::PluginView::evaluate):
        Add a plug-in protector.
2011-02-09  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Repro crash with Sony Google TV ad at Gizmodo
        https://bugs.webkit.org/show_bug.cgi?id=54150
        <rdar://problem/8782346>

        Add test.

        * plugins/npruntime/evaluate-js-destroying-plugin-from-destroy-stream-expected.txt: Added.
        * plugins/npruntime/evaluate-js-destroying-plugin-from-destroy-stream.html: Added.
2011-02-09  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Repro crash with Sony Google TV ad at Gizmodo
        https://bugs.webkit.org/show_bug.cgi?id=54150
        <rdar://problem/8782346>

        Add a new plug-in test that runs JavaScript that destroys the plug-in from within its NPN_DestroyStream callback.

        * DumpRenderTree/DumpRenderTree.xcodeproj/project.pbxproj:
        * DumpRenderTree/TestNetscapePlugIn/Tests/EvaluateJSDestroyingPluginFromDestroyStream.cpp: Added.
        (EvaluateJSDestroyingPluginFromDestroyStream::EvaluateJSDestroyingPluginFromDestroyStream):
        (EvaluateJSDestroyingPluginFromDestroyStream::NPP_Destroy):
        (EvaluateJSDestroyingPluginFromDestroyStream::NPP_DestroyStream):
        * DumpRenderTree/TestNetscapePlugIn/win/TestNetscapePlugin.vcproj:
        * DumpRenderTree/qt/TestNetscapePlugin/TestNetscapePlugin.pro:


Canonical link: https://commits.webkit.org/68176@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78157 268f45cc-cd09-0410-ab3c-d52691b4dbfc